--- a/javaee7-batch/pom.xml
+++ b/javaee7-batch/pom.xml
@@ -8,7 +8,7 @@
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <version.furnace>2.5.0.Final</version.furnace>
+    <version.furnace>2.6.0.Final</version.furnace>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
   <dependencyManagement>
@@ -68,6 +68,18 @@
       <groupId>org.jboss.forge.addon</groupId>
       <artifactId>templates</artifactId>
       <classifier>forge-addon</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.forge.addon</groupId>
+      <artifactId>ui-test-harness</artifactId>
+      <classifier>forge-addon</classifier>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.forge.addon</groupId>
+      <artifactId>maven</artifactId>
+      <classifier>forge-addon</classifier>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
